--- a/Client/src/app/user-registration/user-registration.component.html
+++ b/Client/src/app/user-registration/user-registration.component.html
@@ -7,7 +7,7 @@
   </div>
   <div class="registration__header__buttons">
     <button class="btn">Cancel</button>
-    <button class="btn" [disabled]="isDisable">Create</button>
+    <button class="btn" [disabled]="isDisable" (click)="onCreate()">Create</button>
   </div>
 </div>
 
