--- a/Client/src/app/qualifications/qualifications.component.html
+++ b/Client/src/app/qualifications/qualifications.component.html
@@ -18,7 +18,7 @@
             <form class="educational__qualification__form" [formGroup]="EducationQualificationForm" >
                 <div class="aggregate_percentage">
                     <label for="AggregatePercentage">Aggregate Percentage*</label>
-                    <input type="number" id="AggregatePercentage" formControlName="aggregatedPercentage">
+                    <input type="text" id="AggregatePercentage" formControlName="aggregatedPercentage">
                 </div>
                 <div class="year_of_passing">
                     <label for="YearOfPassing">Year of Passing*</label>
